--- a/app/src/main/res/layout-land/activity_money_pig.xml
+++ b/app/src/main/res/layout-land/activity_money_pig.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,6 +7,8 @@
     android:layout_height="match_parent"
     tools:context=".MoneyPigActivity"
     android:background="@color/black">
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -16,11 +18,11 @@
             android:layout_height="match_parent">
 
             <RelativeLayout
+                android:id="@+id/containerForGoalName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="20dp"
-                android:layout_alignParentTop="true"
-                android:layout_above="@id/containerForImage">
+                android:layout_alignParentTop="true">
 
                 <View
                     android:layout_width="0dp"
@@ -59,7 +61,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="20dp"
-                android:layout_centerInParent="true">
+                android:layout_below="@id/containerForGoalName"
+                >
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/imageOfCurrentGoal"
                     android:layout_width="208dp"
@@ -85,10 +88,12 @@
             </RelativeLayout>
 
             <RelativeLayout
+                android:id="@+id/containerForProgressOfGoal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="20dp"
                 android:layout_below="@id/containerForImage"
+
                 >
 
                 <ProgressBar
@@ -128,10 +133,13 @@
 
 
 
+
             <RelativeLayout
+                android:id="@+id/containerforBtns"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="20dp">
+                android:padding="20dp"
+                android:layout_below="@id/containerForProgressOfGoal">
                 <ImageButton
                     android:id="@+id/addGoalBtn"
                     android:layout_width="wrap_content"
@@ -161,4 +169,5 @@
 
     </LinearLayout>
 
-</RelativeLayout>
+
+</ScrollView>
