--- a/app/src/main/res/layout-land/activity_questions.xml
+++ b/app/src/main/res/layout-land/activity_questions.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -9,18 +9,14 @@
     android:background="@color/black">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_centerInParent="true"
-        android:paddingBottom="30dp">
-
-
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="20dp"
-            >
+            android:layout_marginTop="100dp">
            <TextView
                android:id="@+id/lblQuestion"
                android:layout_width="wrap_content"
@@ -90,6 +86,8 @@
                 android:padding="15dp"/>
         </RelativeLayout>
 
+
+
     </LinearLayout>
 
-</RelativeLayout>
+</ScrollView>
