--- a/app/src/main/res/layout-large/activity_money_pig.xml
+++ b/app/src/main/res/layout-large/activity_money_pig.xml
@@ -7,19 +7,21 @@
     android:layout_height="match_parent"
     tools:context=".MoneyPigActivity"
     android:background="@color/black">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+
+
             <RelativeLayout
+                android:id="@+id/containerForGoalName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="20dp"
                 android:layout_alignParentTop="true"
+
                 android:layout_above="@id/containerForImage">
 
                 <View
@@ -55,11 +57,13 @@
             </RelativeLayout>
 
             <RelativeLayout
+
                 android:id="@+id/containerForImage"
                 android:layout_width="match_parent"
+                android:layout_centerInParent="true"
                 android:layout_height="wrap_content"
                 android:padding="20dp"
-                android:layout_centerInParent="true">
+                >
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/imageOfCurrentGoal"
                     android:layout_width="208dp"
@@ -67,7 +71,6 @@
                     android:layout_centerInParent="true"
                     android:src="@drawable/money_pig_def"
                     app:civ_border_color="@color/white"
-
                     app:civ_border_width="2dp"
 
                     />
@@ -85,6 +88,7 @@
             </RelativeLayout>
 
             <RelativeLayout
+                android:id="@+id/containerForProgressOfGoal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="20dp"
@@ -128,10 +132,12 @@
 
 
 
+
             <RelativeLayout
+                android:layout_below="@id/containerForProgressOfGoal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="20dp">
+                >
                 <ImageButton
                     android:id="@+id/addGoalBtn"
                     android:layout_width="wrap_content"
@@ -139,9 +145,9 @@
                     android:background="@color/black"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentBottom="true"
+                    android:padding="10dp"
                     android:onClick="addGoalClicked"
                     android:foreground="?android:attr/selectableItemBackground"
-
                     android:src="@drawable/btn_add_good_image"/>
 
                 <ImageButton
@@ -152,13 +158,13 @@
                     android:onClick="listOfGoalsBtnClicked"
                     android:layout_alignParentRight="true"
                     android:layout_alignParentBottom="true"
+                    android:padding="10dp"
                     android:foreground="?android:attr/selectableItemBackground"
                     android:src="@drawable/bookmark"/>
 
             </RelativeLayout>
+            </RelativeLayout>
 
-        </RelativeLayout>
 
-    </LinearLayout>
 
 </RelativeLayout>
