--- a/app/src/main/res/layout-small/activity_money_pig.xml
+++ b/app/src/main/res/layout-small/activity_money_pig.xml
@@ -125,6 +125,12 @@
                     android:layout_toRightOf="@id/lblProgressOfGoal" />
             </RelativeLayout>
 
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="20dp">
+
+            </RelativeLayout>
 
 
 
