--- a/app/src/main/res/layout-small/activity_questions.xml
+++ b/app/src/main/res/layout-small/activity_questions.xml
@@ -9,18 +9,14 @@
     android:background="@color/black">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_centerInParent="true"
-        android:paddingBottom="30dp">
-
-
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="20dp"
-            >
+            android:layout_marginTop="100dp">
            <TextView
                android:id="@+id/lblQuestion"
                android:layout_width="wrap_content"
@@ -89,6 +85,8 @@
                 android:background="@drawable/body_for_btn_answers"
                 android:padding="15dp"/>
         </RelativeLayout>
+
+
 
     </LinearLayout>
 
