--- a/app/src/main/res/layout/activity_sign_up_no_acc1.xml
+++ b/app/src/main/res/layout/activity_sign_up_no_acc1.xml
@@ -7,6 +7,10 @@
     tools:context=".SignUpActivityNoAcc1"
     android:background="@color/black">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true">
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnNextFirst"
         android:layout_width="287dp"
@@ -25,22 +29,25 @@
         android:layout_width="321dp"
         android:layout_height="53dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="200dp"
         android:inputType="textPersonName"
         android:hint="@string/string_name_for_signupnoacc1"
         android:background="@drawable/body_for_edit_text"
         android:textSize="30dp"
+        android:layout_marginBottom="-130dp"
+        android:layout_above="@id/txtSurname"
         android:paddingLeft="20dp"/>
 
     <EditText
         android:id="@+id/txtSurname"
         android:layout_width="321dp"
         android:layout_height="53dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="300dp"
+        android:layout_centerInParent="true"
+
+        android:layout_marginTop="50dp"
         android:inputType="textPersonName"
         android:hint="@string/string_surname_for_sign_up_noacc1"
         android:textSize="30dp"
         android:background="@drawable/body_for_edit_text"
         android:paddingLeft="20dp"/>
+    </RelativeLayout>
 </RelativeLayout>
